--- a/Python/Django/README
+++ b/Python/Django/README
@@ -1,1 +1,13 @@
 Django学习
+2022.08.08
+命令行下使用python -m django --version查看django版本。
+django项目的文件层次如下：
+  外层的mysite/目录与Django无关，只是你项目的容器，可以任意重命名。
+  manage.py：一个命令行工具，管理Django的交互脚本。
+  内层的mysite/目录是真正的项目文件包裹目录，它的名字是你引用内部文件的Python包名，例如：mysite.urls。
+  mysite/__init__.py:一个定义包的空文件。
+  mysite/settings.py:项目的配置文件。
+  mysite/urls.py:路由文件，所有的任务都是从这里开始分配，相当于Django驱动站点的目录。
+  mysite/wsgi.py:一个基于WSGI的web服务器进入点，提供底层的网络通信功能，通常不用关心。
+  mysite/asgi.py：一个基于ASGI的web服务器进入点，提供异步的网络通信功能，通常不用关心。
+在上面说到的mysite目录下输入python manage.py runserver命令，启动开发服务器，插一句，感觉和hugo很像。
