--- a/Write_daliy/README
+++ b/Write_daliy/README
@@ -7,3 +7,10 @@
 里面包含很多Scaffold（基因组de novo测序，通过reads拼接获得Contigs后，往往还需要构建454 Paired-end库或Illumina Mate-pair库，
 以获得一定大小片段（如3Kb、6Kb、10Kb、20Kb）两端的序列。基于这些序列，可以确定一些Contig之间的顺序关系，这些先后顺序已知的Contigs组成Scaffold。）
 3.留下一个scaffold后重新跑，发现没有error信息，并且输出的reads结果中也没有了对应的错误。
+
+#将fastq文件转化为fasta文件
+awk '{if(NR%4 == 1){print ">" substr($0, 2)}}{if(NR%4 == 2){print}}' xx.fastq >xx.fasta
+
+#三代测序reads的矫正软件isNOcorrect
+最近几天一直在调试这个软件，但是运行了感觉没变化。
+今天突发奇想，不知道是不是因为没有将reads转化为full_length的reads，打算将reads转化为全长读数在比较。
