--- a/Write_daliy/README
+++ b/Write_daliy/README
@@ -31,6 +31,7 @@ $ split -l 1 run_task.sh run_task --additional-suffix=.sh
 三代测序模拟reads的错误问题
 发现深度越深，测得的假阳性的reads越多，但是变异频率越小。
 
+grep -o 'HIGH|oprD' cns.anno.vcf | wc -l用来看文件里面字符串出现了多少次。
 
 fasta.gz文件解压使用gunzip命令。
 
