--- a/Write_daliy/README
+++ b/Write_daliy/README
@@ -61,3 +61,4 @@ abricate --db vfdb --quiet no.102.contig > Pseudomonas_VF_abricate
 
 
 二代测序call SNP可以使用snippy软件，在snippy环境中。
+这个软件可以自动call SNP并且准备进化树文件。
