--- a/统计/README
+++ b/统计/README
@@ -1,2 +1,6 @@
 #logistic回归分析
 
+逻辑回归分析适用于因变量为分类变量时所进行的分析，属于概率型非线性回归，可以分析影响因素，也可以用来预测和判别。
+
+所谓的二分类逻辑回归，他们的因变量Y通常是二分类变量，也就是我们常说的0、1变量（生存或死亡；有效或无效）。并且1代表阳性结果，
+0代表阴性结果（死亡），
